--- a/Style/User_InquiryPageCSS.css
+++ b/Style/User_InquiryPageCSS.css
@@ -354,8 +354,13 @@ td {
     grid-auto-rows: minmax(80px, auto);
 }
 
+.faq-title {
+    font-family: nexa;
+}
+
 /* FAQ frames with smaller size */
 .faq-frame {
+    font-family: louis;
     margin-bottom: 30%;
     background-color: #ffffff;
     box-shadow: 0 4px 7px rgba(0, 0, 0, 0.2);
@@ -379,6 +384,7 @@ td {
     margin: 0;
     font-size: 14px;
     font-weight: bold;
+    font-family: louis;
 }
 
 /* Modal styles */
@@ -395,7 +401,12 @@ td {
     z-index: 999;
 }
 
+.faq-modal-title {
+    font-family: nexa;
+}
+
 .faq-modal-content {
+    font-family: nexa;
     background-color: white;
     padding: 20px;
     border-radius: 12px;
