Fixed Reset Password Frontend

--- a/Style/User_ResetPasswordCSS.css
+++ b/Style/User_ResetPasswordCSS.css
@@ -60,8 +60,12 @@ body {
 
 /* Input Field */
 .input-field {
+    border: solid 1px rgb(63, 63, 63);
+    border-radius: 10px;
     position: relative;
+    padding: 10px;
     margin-bottom: 20px;
+    width: 100$;
 }
 
 .input-field input {
