--- a/Style/User_VerifyOTPCSS.css
+++ b/Style/User_VerifyOTPCSS.css
@@ -23,7 +23,14 @@ body {
   .otp-container h2 {
     font-size: 2rem; /* Larger font size for heading */
     color: #333; /* Dark text color */
+    margin-bottom: 5px;
+    font-family: nexa;
+  }
+  .otp-container h4 {
+    font-size: 0.9rem; /* Larger font size for heading */
+    color: #333; /* Dark text color */
     margin-bottom: 10px;
+    font-family: louis;
   }
   
   .otp-container form {
@@ -39,6 +46,7 @@ body {
   }
   
   .otp-container input[type="text"] {
+    font-family: louis;
     width: 100%;
     padding: 12px;
     margin-bottom: 20px;
@@ -51,13 +59,14 @@ body {
   .otp-container button {
     background-color: #4CAF50; /* Green background for the button */
     color: white;
-    padding: 12px 20px;
+    padding: 12px;
     border: none;
-    border-radius: 10px;
-    font-size: 1rem;
+    border-radius: 20px;
+    font-size: 0.9rem;
     cursor: pointer;
-    width: 100%;
+    width: 60%;
     transition: background-color 0.3s ease;
+    font-family: louis;
   }
   
   .otp-container button:hover {
