--- a/Style/Admin_AppointmentsPageCSS.css
+++ b/Style/Admin_AppointmentsPageCSS.css
@@ -187,7 +187,7 @@ button:hover {
     border-radius: 20px;
     padding:none;
     background-color: rgb(208, 90, 90);
-    font-size: 0.7;
+    font-size: 1vw;
     cursor: pointer;
 }
 
