--- a/Style/Admin_ReviewsPageCSS.css
+++ b/Style/Admin_ReviewsPageCSS.css
@@ -13,6 +13,16 @@ body {
     font-family: louis;
 }
 
+select {
+    font-family: louis;
+    border-radius: 20px;
+    padding: 0.5vw;
+}
+
+table {
+    min-width: 100%;
+}
+
 .calendar {
     position: fixed;
     top: 30px;
@@ -217,7 +227,7 @@ h1 {
 }
 
 h5 {
-    line-height: 1.5vw;
+    line-height: 1vw;
     text-align: center;
     font-size: 1vw;
 }
@@ -225,7 +235,7 @@ h5 {
 h6 {
     line-height: 1px;
     text-align: center;
-    font-size: 0.8vw;
+    font-size: 0.5vw;
     color: gray;
 }
 
