--- a/Style/User_HomepageCSS.css
+++ b/Style/User_HomepageCSS.css
@@ -113,6 +113,8 @@
 }
 
 .frame-title {
+    z-index: 999;
+    color: #2a2a2a;
     font-family: louis;
     font-size: 1.2rem;
     margin-top: 10px;
@@ -392,9 +394,11 @@
 }
 
 .frame-title2 {
+    z-index: 10;
     font-family: nexa;
     font-size: 2rem;
     margin-bottom: 10px;
+    color:#1e271f;
 }
 
 .frame-icon {
