--- a/Style/User_AccountPageCSS.css
+++ b/Style/User_AccountPageCSS.css
@@ -101,6 +101,11 @@ body {
 }
 
 
+.file-label {
+    font-size: 1vw;
+    color: gray;
+}
+
 .content {
     flex-grow: 1;
     padding: 30px;
@@ -155,12 +160,12 @@ body {
 
     /* Buttons */
     .content button {
-        padding: 12px 20px;
+        padding: 1vw;
         background-color: #2a2a2a; /* Button color */
         color: white;
         border: none;
         border-radius: 25px; /* Rounded buttons */
-        font-size: 16px;
+        font-size: 1vw;
         cursor: pointer;
         transition: background-color 0.3s ease, transform 0.3s ease;
     }
@@ -253,3 +258,4 @@ body {
         max-width: 100%;
     }
 }
+
